--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,500&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -15,8 +16,10 @@
 }
 
 .nav-name {
-  font-family: 'Luckiest Guy', cursive;
-  color: #915eff;
+  background-color: #00008E;
+  color: #FFF;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .hash-span {
